# FieldDesk-AI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/worker/: README.md  pyproject.toml
apps/worker/fielddesk_worker/: __init__.py  config.py  db.py  db_queries.py  main.py  storage.py
apps/worker/fielddesk_worker/db_queries/: __init__.py  _helpers.py  ai_extractions.py  ai_jobs.py  ai_model_calls.py  documents.py  human_reviews.py  job_tickets.py  rag.py  recommendations.py  tenant_budgets.py  transcripts.py  voice_notes.py
apps/worker/fielddesk_worker/embeddings/: chunker.py  contextual.py  service.py
apps/worker/fielddesk_worker/evals/: __main__.py  _provider_info.py  comparison.py  extraction.py  golden.py  persistence.py  recommendations.py  runner.py  seed_corpus.py
apps/worker/fielddesk_worker/extraction/: schema.py  service.py
apps/worker/fielddesk_worker/jobs/: __init__.py  budget.py  dispatch.py  queue.py  reliability.py  state.py
apps/worker/fielddesk_worker/parsing/: __init__.py  base.py  doc.py  docx.py  markdown.py  pdf.py  pptx.py  text.py
apps/worker/tests/: test_backstamp_ticket_id.py  test_budget_gate.py  test_contextual_retrieval.py  test_evals_comparison.py  test_evals_extraction.py  test_kb_answer.py  test_openai_embedding.py  test_openai_llm_prompt.py  test_parsing_and_chunker.py  test_prompting_safety.py  test_prompts_registry.py  test_reranking.py  test_seed_corpus.py  test_transcription.py
docs/: AI_WORKFLOWS.md  ARCHITECTURE.md  (+3 more)
(+168 files in other folders)
